--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "mongoose": "^4.12.5",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
